[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyrise"
dynamic = ["version", "readme"]
description = "HIV Resistance Interpretation and Visualization System"
authors = [
  { name = "Gurasis Osahan", email = "gurasis.osahan@phac-aspc.gc.ca" }
]
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
keywords = ["hiv", "drug-resistance", "bioinformatics", "multiqc", "sierra"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "beautifulsoup4>=4.12",
  "PyYAML>=6.0",
  "questionary>=2.0",
  "requests>=2.31",
  "rich>=13.7",
  "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
interactive = ["questionary>=2.0"]
report = ["multiqc>=1.33"]
dev = [
  "build>=1.2",
  "coverage[toml]>=7.4",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "twine>=5.1",
]

[project.urls]
Source = "https://github.com/phac-nml/HyRISE"
Issues = "https://github.com/phac-nml/HyRISE/issues"
Documentation = "https://github.com/phac-nml/HyRISE/wiki"

[project.scripts]
hyrise = "hyrise.cli:main"
hyrise-container-build = "hyrise.commands.container:main"
hyrise-sierra = "hyrise.commands.sierra:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "hyrise.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.package-data]
hyrise = [
  "HIVDB_*.xml",
  "hyrise.def",
  "Dockerfile",
  "Dockerfile.runtime",
  "core/assets/*.png",
  "core/assets/*.svg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--maxfail=1", "--disable-warnings"]
filterwarnings = ["ignore::DeprecationWarning:pkg_resources"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
